adding html and css content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,40 @@
   <link rel="stylesheet" href="hangman.css">
   <title>Document</title>
 </head>
+
 <body>
   <script src="hangman.js"></script>
+  <div class="container">
+    <div id="game_title">
+      <h3>Hangman</h3>
+      <h2>find the hidden word</h2>
+    </div>
+    <div class = "game_body">
+      <p id = "char1">-</p>
+      <p id = "char2">-</p>
+      <p id = "char3">-</p>
+      <p id = "char4">-</p>
+      <p id = "char5">-</p>
+    </div>
+    <div class="letters">
+      <button id="button1">k</button>
+      <button id="button2">p</button>
+      <button id="button3">g</button>
+      <button id="button4">h</button>
+      <button id="button5">s</button>
+      <button id="button6">f</button>
+      <button id="button7">m</button>
+      <button id="button8">n</button>
+      <button id="button9">q</button>
+      <button id="button10">r</button>
+      <button id="button11">a</button>
+      <button id="button12">e</button>
+      <button id="button13">z</button>
+      <button id="button14">w</button>
+      <button id="button15">t</button>
+      <button id="button16">o</button>
+    </div>
+  </div>
 </body>
+
 </html>
