adding lose situation

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       <h3>Hangman</h3>
       <h2>find the hidden word</h2>
     </div>
-    <div class = "game_body">
-      <p id = "char1">-</p>
-      <p id = "char2">-</p>
-      <p id = "char3">-</p>
-      <p id = "char4">-</p>
-      <p id = "char5">-</p>
+    <div class="game_body">
+      <p class="charA">-</p>
+      <p class="charA">-</p>
+      <p class="charA">-</p>
+      <p class="charA">-</p>
+      <p class="charA">-</p>
     </div>
     <div class="letters">
       <button id="button1">k</button>
@@ -41,6 +41,7 @@
       <button id="button15">t</button>
       <button id="button16">o</button>
     </div>
+    <p id="count">your maxmimum number of clicks is seven</p>
   </div>
 </body>
 
